# monorepo

service-a/: pyproject.toml
service-a/tests/: test_a.py
service-b/: pyproject.toml
service-b/service_b/: b.py
service-b/tests/: test_b.py
